crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@141.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select int4range(1, 2, '()');"
---
SelectStmt@0..29
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..27
    FuncCall@7..27
      Ident@7..16 "int4range"
      Ascii40@16..17 "("
      AConst@17..18
        Iconst@17..18 "1"
      Ascii44@18..19 ","
      Whitespace@19..20 " "
      AConst@20..21
        Iconst@20..21 "2"
      Ascii44@21..22 ","
      Whitespace@22..23 " "
      AConst@23..27
        Sconst@23..27 "'()'"
  Ascii41@27..28 ")"
  Ascii59@28..29 ";"

