crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@145.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select daterange('2000-01-10'::date, '2000-01-20'::date, '()');"
---
SelectStmt@0..63
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..61
    FuncCall@7..61
      Ident@7..16 "daterange"
      Ascii40@16..17 "("
      TypeCast@17..35
        AConst@17..29
          Sconst@17..29 "'2000-01-10'"
        Typecast@29..31 "::"
        TypeName@31..35
          Ident@31..35 "date"
      Ascii44@35..36 ","
      Whitespace@36..37 " "
      TypeCast@37..55
        AConst@37..49
          Sconst@37..49 "'2000-01-20'"
        Typecast@49..51 "::"
        TypeName@51..55
          Ident@51..55 "date"
      Ascii44@55..56 ","
      Whitespace@56..57 " "
      AConst@57..61
        Sconst@57..61 "'()'"
  Ascii41@61..62 ")"
  Ascii59@62..63 ";"

