crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@15.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '[,z]'::textrange;"
---
SelectStmt@0..25
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..24
    TypeCast@7..24
      AConst@7..13
        Sconst@7..13 "'[,z]'"
      Typecast@13..15 "::"
      TypeName@15..24
        Ident@15..24 "textrange"
  Ascii59@24..25 ";"

